overflow issues

--- a/webpage/assets/body.css
+++ b/webpage/assets/body.css
@@ -9,7 +9,7 @@ body {
   width: 100vw;
   position: relative;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 h1 {
